# call-records-dashboard

./: .dockerignore  .env.example  .env.render.example  .gitignore  README.md  README_DEPLOY.md  docker-compose.yml  render.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: routes_dashboard.py  routes_google_auth.py  routes_ingest.py
backend/app/core/: config.py
backend/app/db/: schema_sync.py  session.py
backend/app/integrations/: drive_client.py  drive_path.py  google_oauth.py
backend/app/models/: __init__.py  sentiment.py  transcript.py
backend/app/schemas/: dashboard.py
backend/app/services/: auto_ingest_service.py  ingest_lock.py  ingest_service.py  ingest_status.py  intent_summary_service.py  sentiment_service.py  transcribe_service.py
backend/tests/: test_api_smoke.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: main.jsx  styles.css
frontend/src/components/: CallDetailPanel.jsx  CallSentimentTable.jsx  CallSentimentTable.test.jsx  CallsByNumberPanel.jsx  SentimentDistributionChart.jsx  SentimentTrendChart.jsx  TemporaryTranscriptViewer.jsx
frontend/src/lib/: api.js
frontend/src/pages/: Dashboard.jsx
operations/: production_pipeline.ipynb
scripts/: dev-server.ps1
