[project]
name = "call-records-sentiment-backend"
version = "0.1.0"
description = "FastAPI backend for Google Drive transcript sentiment dashboard"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.32",
  "psycopg2-binary>=2.9.9",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "pytest>=8.3.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
